2018-02-02  Sean McKean  <smckean83@gmail.com>

	[BZ #22735]
	* time/time.h (clock): Reference CLOCKS_PER_SEC in comment.

2018-02-10  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22433]
	* sysdeps/unix/sysv/linux/aarch64/sys/ptrace.h (__ptrace_request):
	Remove arm-specific PTRACE_GET_THREAD_AREA, PTRACE_GETHBPREGS,
	and PTRACE_SETHBPREGS.

2018-02-14  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/sh/libm-test-ulps: Update.

2018-02-09  DJ Delorie  <dj@redhat.com>

	[BZ #22827]
	* sysdeps/unix/sysv/linux/riscv/readelflib.c (process_elf_file): Use
	64-bit ELF type for 64-bit ELF objects.

2018-02-07  Igor Gnatenko  <ignatenko@redhat.com>

	[BZ #22797]
	* sysdeps/unix/sysv/linux/bits/mman-shared.h (pkey_get): Add
	missing second underscore to parameter name.

2018-02-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #22638]
	* sysdeps/sparc/sparc32/start.S (_start): Check PIC instead of
	SHARED.
	* sysdeps/sparc/sparc64/start.S (_start): Likewise.

2018-02-01  Dmitry V. Levin  <ldv@altlinux.org>

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.27".
	* include/features.h (__GLIBC_MINOR__): Set to 2.27.

	* NEWS: Add the list of bugs fixed in 2.27.

2018-02-01  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* stdlib/test-atexit-race-common.c (do_test): Check stack size
	against PTHREAD_STACK_MIN.

2018-02-01  Dmitry V. Levin  <ldv@altlinux.org>

	* manual/contrib.texi (Palmer Dabbelt, Arjun Shankar, Florian Weimer):
	New entries.
	(Rafal Luzynski, Andreas Schwab): Update.

2018-02-01  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #10871]
	* NEWS: List the languages which actually use the alternative
	months feature in this release.  Also explain that "alt_mon" and
	"ab_alt_mon" are optional.

2018-01-31  Il'ya Malakhov  <ilmalakhov@yandex.ru>

	[BZ #22765]
	* crypt/badsalttest.c (do_test): Set cd.initialized to 0.

2018-01-31  Dmitry V. Levin  <ldv@altlinux.org>

	* manual/install.texi (Tools for Compilation): Update the newest